Kubernetes/jmaze-k8s-cilium/media/prowlarr/http_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
spec:
  hostnames:
    - prowlarr.media.jmaz.tv
  parentRefs:
    - name: default-gateway
      namespace: gateway
      sectionName: media # name of the gateway listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr
          port: 9696
          kind: Service
